--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,13 @@ jobs:
         with:
           python-version: "3.10"  # Python version to test with.
 
-      - name: Install dependencies (PowerShell)
-        run: |
-          python -m venv venv  # Create virtual environment
-          .\venv\Scripts\Activate.ps1  # Activate venv in PowerShell
-          pip install --upgrade pip
-          pip install -r requirements.txt  # Install dependencies
-        shell: pwsh  # Runs in PowerShell
+      # - name: Install dependencies (PowerShell)
+      #   run: |
+      #     python -m venv venv  # Create virtual environment
+      #     .\venv\Scripts\Activate.ps1  # Activate venv in PowerShell
+      #     pip install --upgrade pip
+      #     pip install -r requirements.txt  # Install dependencies
+      #   shell: pwsh  # Runs in PowerShell
 
       - name: Run Unit Tests (PowerShell)
         run: |
