--- a/OctoPrint-Gcode_scanner/docker-compose.yml
+++ b/OctoPrint-Gcode_scanner/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '2.4'
-
 services:
   octoprint:
     image: octoprint/octoprint
@@ -8,7 +6,9 @@ services:
       - 80:80
     volumes:
     - octoprint:/octoprint
-    - ./plugins:/octoprint/octoprint/plugins
+    - ../OctoPrint-Gcode_scanner:/octoprint/plugins/OctoPrint-Gcode_scanner
+    entrypoint: >
+      sh -c "pip install -e /octoprint/plugins/OctoPrint-Gcode_scanner"
 
 volumes:
   octoprint:
